--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,11 @@ include_directories(${Vulkan_INCLUDE_DIRS})
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 file(GLOB_RECURSE PRIVATE_HEADERS "src/headers/luna/*.hpp")
-file(GLOB_RECURSE PRIVATE_IMPLEMENTATIONS "src/headers/luna/*.tpp")
+file(GLOB_RECURSE PRIVATE_IMPLEMENTATIONS "src/headers/luna/implementations/*.tpp")
 file(GLOB_RECURSE PUBLIC_HEADERS "include/luna/*.h")
 
-add_library(Luna STATIC ${SOURCES} ${PRIVATE_HEADERS} ${PRIVATE_IMPLEMENTATIONS} ${PUBLIC_HEADERS})
-#add_executable(Luna ${SOURCES} ${PRIVATE_HEADERS} ${PRIVATE_IMPLEMENTATIONS} ${PUBLIC_HEADERS})
-include_directories(Luna PUBLIC "${CMAKE_SOURCE_DIR}/include")
+#add_library(Luna STATIC ${SOURCES} ${PRIVATE_HEADERS} ${PRIVATE_IMPLEMENTATIONS} ${PUBLIC_HEADERS})
+add_executable(Luna ${SOURCES} ${PRIVATE_HEADERS} ${PRIVATE_IMPLEMENTATIONS} ${PUBLIC_HEADERS})
+target_link_libraries(Luna ${Vulkan_LIBRARIES})
 include_directories(Luna PUBLIC "${CMAKE_SOURCE_DIR}/src/headers")
+include_directories(Luna PUBLIC "${CMAKE_SOURCE_DIR}/include")
