--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.30)
-project(example C)
+project(examples C)
 
 set(CMAKE_C_STANDARD 11)
 
@@ -15,7 +15,16 @@ include_directories(${SDL3_INCLUDE_DIR})
 find_package(Vulkan REQUIRED)
 include_directories(${Vulkan_INCLUDE_DIRS})
 
-add_executable(example main.c)
-target_link_libraries(example ${SDL3_LIBRARY} ${Vulkan_LIBRARIES} SDL3 ${CMAKE_SOURCE_DIR}/cmake-build-debug/libLuna.a)
-set_target_properties(example PROPERTIES LINKER_LANGUAGE CXX)
-add_dependencies(example Luna)
+find_package(lodepng-c CONFIG REQUIRED)
+
+configure_file(${CMAKE_SOURCE_DIR}/logo.png ${CMAKE_CURRENT_BINARY_DIR}/logo.png COPYONLY)
+
+add_executable(HelloTriangle helloTriangle.c)
+target_link_libraries(HelloTriangle ${SDL3_LIBRARY} ${Vulkan_LIBRARIES} SDL3 ${CMAKE_BINARY_DIR}/libLuna.a)
+set_target_properties(HelloTriangle PROPERTIES LINKER_LANGUAGE CXX)
+add_dependencies(HelloTriangle Luna)
+
+add_executable(LunaCube lunaCube.c)
+target_link_libraries(LunaCube ${SDL3_LIBRARY} ${Vulkan_LIBRARIES} lodepng-c SDL3 ${CMAKE_BINARY_DIR}/libLuna.a)
+set_target_properties(LunaCube PROPERTIES LINKER_LANGUAGE CXX)
+add_dependencies(LunaCube Luna)
