--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -16,12 +16,14 @@ if (ALL OR HelloTriangle)
 endif ()
 
 if (ALL OR LunaCube)
-    fetchLodepng()
     configure_file(${CMAKE_SOURCE_DIR}/logo.png ${CMAKE_CURRENT_BINARY_DIR}/logo.png COPYONLY)
+
+    fetchLodepng()
+    fetchCglm()
 
     add_executable(LunaCube lunaCube.c ${LODEPNG_DIR}/lodepng.c)
     set_target_properties(LunaCube PROPERTIES LINKER_LANGUAGE CXX)
-    target_link_libraries(LunaCube PRIVATE VulkanLibrary SDL3::SDL3 ${CMAKE_BINARY_DIR}/libLuna.a)
+    target_link_libraries(LunaCube PRIVATE VulkanLibrary cglm SDL3::SDL3 ${CMAKE_BINARY_DIR}/libLuna.a)
     target_include_directories(LunaCube PRIVATE ${CMAKE_SOURCE_DIR}/include ${LODEPNG_DIR})
     add_dependencies(LunaCube Luna)
 endif ()
