--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -4,26 +4,23 @@ project(examples C)
 include(${CMAKE_SOURCE_DIR}/cmake/options.cmake)
 include(${CMAKE_SOURCE_DIR}/cmake/findPackages.cmake)
 
-findVulkan()
 findSDL3()
 
 if (ALL OR HelloTriangle)
     add_executable(HelloTriangle helloTriangle.c)
     set_target_properties(HelloTriangle PROPERTIES LINKER_LANGUAGE CXX)
-    target_link_libraries(HelloTriangle PRIVATE VulkanLibrary SDL3::SDL3 ${CMAKE_BINARY_DIR}/libLuna.a)
-    target_include_directories(HelloTriangle PRIVATE ${CMAKE_SOURCE_DIR}/include)
-    add_dependencies(HelloTriangle Luna)
+    target_compile_options(HelloTriangle PRIVATE $<IF:$<CONFIG:Debug>,${DEBUG_FLAGS},${RELEASE_FLAGS}>)
+    target_link_libraries(HelloTriangle PRIVATE SDL3::SDL3 Luna)
 endif ()
 
 if (ALL OR LunaCube)
     configure_file(${CMAKE_SOURCE_DIR}/logo.png ${CMAKE_CURRENT_BINARY_DIR}/logo.png COPYONLY)
 
-    fetchLodepng()
+    fetchLodePNG()
     fetchCglm()
 
-    add_executable(LunaCube lunaCube.c ${LODEPNG_DIR}/lodepng.c)
+    add_executable(LunaCube lunaCube.c)
     set_target_properties(LunaCube PROPERTIES LINKER_LANGUAGE CXX)
-    target_link_libraries(LunaCube PRIVATE VulkanLibrary cglm SDL3::SDL3 ${CMAKE_BINARY_DIR}/libLuna.a)
-    target_include_directories(LunaCube PRIVATE ${CMAKE_SOURCE_DIR}/include ${LODEPNG_DIR})
-    add_dependencies(LunaCube Luna)
+    target_compile_options(LunaCube PRIVATE $<IF:$<CONFIG:Debug>,${DEBUG_FLAGS},${RELEASE_FLAGS}>)
+    target_link_libraries(LunaCube PRIVATE LodePNG cglm SDL3::SDL3 Luna)
 endif ()
