--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_VISIBILITY_PRESET "hidden")
 set(CMAKE_CXX_VISIBILITY_PRESET "hidden")
 
-if (CMAKE_BUILD_TYPE STREQUAL "Release" AND ENABLE_LTO)
+set(LUNA_USE_LTO $<AND:$<BOOL:LUNA_ENABLE_LTO>,$<CONFIG:Release>>)
+if (LUNA_USE_LTO)
     include(CheckIPOSupported)
     check_ipo_supported(RESULT IS_IPO_SUPPORTED)
     if (IS_IPO_SUPPORTED)
@@ -24,11 +25,11 @@ string(REPLACE " " ";" COMMON_FLAGS $<$<COMPILE_LANGUAGE:C>:${CMAKE_C_FLAGS}>$<$
 string(REPLACE " " ";" DEBUG_FLAGS $<$<COMPILE_LANGUAGE:C>:${CMAKE_C_FLAGS_DEBUG}>$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CXX_FLAGS_DEBUG}>)
 string(REPLACE " " ";" RELEASE_FLAGS $<$<COMPILE_LANGUAGE:C>:${CMAKE_C_FLAGS_RELEASE}>$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CXX_FLAGS_RELEASE}>)
 if (MSVC)
-    set(COMMON_FLAGS /W4 /wd4244 /wd4267 /wd4146 /external:W0 ${COMMON_FLAGS})
+    set(COMMON_FLAGS /W4 $<$<BOOL:${LUNA_WARNINGS_ARE_FATAL}>:/WX> /wd4244 /wd4267 /wd4146 /external:W0 ${COMMON_FLAGS})
     set(DEBUG_FLAGS ${COMMON_FLAGS} ${DEBUG_FLAGS} /Zi /Od)
     set(RELEASE_FLAGS ${COMMON_FLAGS} ${RELEASE_FLAGS} /O2 /DNDEBUG)
 else ()
-    set(COMMON_FLAGS $<$<BOOL:${USE_PIPES}>:-pipe> -Wpedantic -Wall -Wextra -Wno-missing-field-initializers ${COMMON_FLAGS})
+    set(COMMON_FLAGS $<$<BOOL:${LUNA_USE_PIPES}>:-pipe> -Wpedantic -Wall -Wextra $<$<BOOL:${LUNA_WARNINGS_ARE_FATAL}>:-Werror> -Wno-missing-field-initializers ${COMMON_FLAGS})
     set(DEBUG_FLAGS ${COMMON_FLAGS} ${DEBUG_FLAGS} -g -O0)
     set(RELEASE_FLAGS ${COMMON_FLAGS} ${RELEASE_FLAGS} -O3 -DNDEBUG)
 endif ()
@@ -86,6 +87,6 @@ target_link_libraries(Luna PUBLIC VMA VulkanLibrary)
 target_include_directories(Luna PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(Luna PRIVATE ${CMAKE_SOURCE_DIR}/src/headers)
 
-if (EXAMPLES)
+if (LUNA_EXAMPLES)
     add_subdirectory(example)
 endif ()
